@@ -145,6 +145,14 @@
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
+            <!-- Surefire 插件配置，支持测试预览功能 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
